<resources>
    <string name="app_name">Hello</string>
    <string name="label_number1">Number 01</string>
    <string name="label_number2">Number 02</string>
    <string name="edit_number1">23</string>
    <string name="edit_number2">12</string>
    <string name="btn_Plus">+</string>
    <string name="btn_Minus">-</string>
    <string name="btn_Multiply">X</string>
    <string name="btn_Divide">/</string>
</resources>