<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-48dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="129dp"
        android:layout_height="31dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/label_number1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNumber2"
        android:layout_width="283dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edit_number2"
        android:inputType="number"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editNumber1"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/edit_number1"
        android:inputType="number"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_number2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumber1" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="16dp"
        android:onClick="buttonClick"
        android:text="@string/btn_Plus"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
        app:layout_constraintEnd_toStartOf="@+id/btnSubstract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumber2" />

    <Button
        android:id="@+id/btnSubstract"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:onClick="buttonClick"
        android:text="@string/btn_Minus"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnMultiply"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonClick"
        android:text="@string/btn_Multiply"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnDivide"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        android:onClick="buttonClick"
        android:text="@string/btn_Divide"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMultiply"
        app:layout_constraintTop_toTopOf="@+id/btnMultiply" />

</androidx.constraintlayout.widget.ConstraintLayout>